[nb] Edit: 20211027161236.md

--- a/20211027161236.md
+++ b/20211027161236.md
@@ -1,5 +1,161 @@
 # Qt vs Godot : GUI アプリケーション作成環境として
 
+https://medium.com/swlh/what-makes-godot-engine-great-for-advance-gui-applications-b1cfb941df3b
+
 Godot はゲームだけでなく一般的なGUIアプリケーションを作成するのにとても役立つ。
 
+- NodeTree
+  - これはそのままUIのウィジェットツリーになる
+- Visual Programming
+- Godot Editor 自体が Godot で作られたゲーム
+  - 自分のドッグフードを自分で食う
+- サイズが小さい(70MBくらい)
+  - QtCreatorIDEは200MB以上
+  - XCode は 5GB 以上
+- Node の追加画面が使いやすい
+  - 開くとすぐに検索バー
+  - フィルタリングにより必要なNodeを素早く見つける
+- UIの複製
+  - Editor 上で Cmd + D
+  - シーンに分離してまとめてコピペ
+- 正確なコンポーネント選択
+  - Qt Creator では親レイアウトを選択しようとして子コンポーネントを選択してしまうことがある
+  - Godot では 親子ロックがあるので、起こりにくい
+- ドロップダウンメニュー例
+  - OptionButton を gdscript で拡張して、特定の選択肢のドロップダウンメニューにする
+  - シーンとして保存して使い回せる
+  - カスタム動作が必要な場合は、特定コンポーネントのスクリプトを切り離せる
+- Godot はシーンを実行中に編集できる
+  - 実行中にコードを編集、反映
+
+# 競合相手
+
+- Electron
+- Qt Widgets
+  - 書き込み専用
+  - 後で戻ってきてレイアウトを変更したりするとこわれる
+- Qt QML
+  - 動的スクリプトを採用しているらしい
+  - あまり直感的でなく、モバイル用/ウィンドウ用に最適化を分けるのが面倒
+  - GUIを構築するための高度なウィジェットのセットがない
+- Cocoa (Objective-C or Swift)
+  - Constraint base のレイアウトマネージャー
+- SwiftUI
+  - 型システムの複雑さと厳密さのメリット/デメリットが有る
+  - 先進的だが、複雑
+  - この記事の著者的には SwiftUI
+  は結構良いけど、GUIの作成は視覚的なフローなのでコードとUIの両方で出来たほうが良いらしい
+  - 実行中にライブ編集なども出来ない
+
+- Electron
+  - HTML, CSS, JS
+  - Web stack
+  - 著者がWebのテクノロジーに慣れてないので、あまり語れないが好きな部分はあるらしい
+  - いくつか課題はある
+    - 複雑(HTML, CSS, JS をそれぞれ学ぶ時間)
+    - GUIアプリケーション用ではなくWebページ用
+      - スクロール可能なWebサイトに居るという仮定による制限
+  - Web ベースアプリケーションはリソースを大量消費しがち
+    - ゲームエンジンも人のこと言えないが
+  - VSCode や Atom
+  のように、素晴らしいエディターをWebテクノロジーで作れるという例でもあるが、Insomniac
+  はゲームエンジンを作ろとして失敗した
+
+- Flutter
+  - 著者はOld Style
+  な開発者なので、Flutterの目新しい機能よりもすぐに使えるものを欲する
+  - Flutter で作られた IDE や3Dモデリングアプリケーションはあるのか？
+    - 現状はない
+    - Godot Editor は Godot で作られてる
+
+- GUI デザイナーの有無
+  - Flutter, SwiftUI は GUIデザイナーがない
+  - 比較的扱いやすいGUIデザインフォーマットは必要
+    - QML はこの点では優れてる
+    - コーディングとグラフィカルエディタの両方が必要
+    - Godot はデータの保存やバージョン管理に適したテキストファイルリソース
+      - XML, JSON より単純, git でよく動作する
+
+
+競合に共通して言えるのは、肥大化したライブラリ・開発環境であるということ
+Godot は 31MB でダウンロードできるので簡単に始められる
+
+
+# UI as a Code としての Godot
+
+Godot の UI 構造を保存する形式になりうるだろうシーンファイル (.tscn)は
+全くのネストなしでSceneTree構造を保存するため、行指向ベースのバージョン管理で
+とても役に立つ
+
+(ページの例参照)
+[node ... parent = "Node1 / Node2 / ..."]
+margin_right = 20.0
+margin_bottom = 180.0
+text = "clear"
+prop1 = val1
+prop2 = val2
+...
+
+という記述が続く
+
+
+
+# シーンシステム
+複数人が同じGUIで作業する難しさを、シーンファイルの分離で解決する
+
+
+# Why Are Game Engines the Future?
+
+ゲームエンジンを使ってGUIアプリケーションを作るのはおかしいと本能的に感じる人は多いが、
+世界がその様になるのは非常に正当な理由がある
+
+それはお金の流れ
+ゲーム業界は巨大で、今日のゲームは生き残るために残酷な開発条件に直面していて、ほとんどのゲームはビジネスアプリケーションに匹敵する複雑さを持つ
+
+- パフォーマンス恒常
+- 開発の反復
+  - 本当に早い PDCA が必要
+  - すぐに実行・デバッグ出来る必要あり
+  - 多くの調整、実験、プレイが必要
+
+GUIアプリケーション開発で直面している課題を、ゲームエンジンは既に解決している。
+コードのライブ編集など当たり前
+試している特定のレベルの微調整でいちいち全体をリロードすることなど不要。
+
+例えば、ロボット用シミュレーターを作った人々も最終的にゲームエンジンに切り替えている。
+大規模で複雑なGUIアプリと同様に、ロボットシミュレーターの市場はニッチ
+ゲームエンジンの市場は品質とパフォーマンスと使いやすさを、それらニッチ市場を遥かに超えたレベルが要求される。
+
+経済の規模は重要
+
+例. 
+- 電気自動車はまだニッチ
+- ラップトップPCの市場は巨大
+- テスラは車用のカスタムバッテリーを作る代わりに、7000台のラップトップ用バッテリーを車に積んだ
+
+
+# 欠点
+ゲームエンジンは一般的に常にレンダリングする。
+再レンダリングが必要な場合だけそうするReactやGUIアプリ専用ライブラリに比べると
+CPU, GPU 使用率が高い
+
+Godot には低使用率モードがあるらしい
+
+# CrossPlatForm
+
+最近では Web Technology をGUIアプリ開発に使うことが多い
+Web の支配力と認知度はすごい
+
+複雑な大規模アプリではGodotの入る余地も十分ある
+
+# 複雑で大規模なアプリケーションとは？
+
+地質調査データ表示用のアプリで、何万ドルもするやつ
+実験のシミュレーション
+
+複雑なUI
+ローカライゼーション
+3D機能の使用
+
+ゲームエンジンと共通点が多い
 
