[nb] Edit: 20211027214941.md

--- a/20211027214941.md
+++ b/20211027214941.md
@@ -104,5 +104,14 @@ http :8000/rest/v1/
 - session
 
 
+# まとめ
+
+- 基本的な機能は持ってる
+- 更にシンプルなインターフェース
+- curl, wget も含めて三つ巴で比較されることも多い
+- python, pip が入ってる環境なら有り
+- 他人と共有するコードや、CIには含まないほうが良いかも
+  - どこでも入ってるとは限らないので
+
 
 
