[nb] Edit: 20211027214941.md

--- a/20211027214941.md
+++ b/20211027214941.md
@@ -114,4 +114,21 @@ http :8000/rest/v1/
   - どこでも入ってるとは限らないので
 
 
+# 他の競合は？
 
+基本的に、http-client のタグでGithubで調べると httpie がトップ(curl の2倍スター)
+
+
+他の競合は殆ど見なかった
+
+# httpie-prompt
+
+httpie 上に構築されたプロンプト型のCLI http client
+
+ちょっとずつ入力できるので、便利かも
+
+brew で install できないので pip でやるしか無い
+
+```sh
+pip install http-prompt
+```
