[nb] Edit: 20211029180636.md

--- a/20211029180636.md
+++ b/20211029180636.md
@@ -1,5 +1,7 @@
 # LocalStack Tutorial
 
+#localstack #aws #cdk
+
 https://www.youtube.com/watch?v=3_sqr0G9zb0
 
 
@@ -15,5 +17,54 @@ https://www.youtube.com/watch?v=3_sqr0G9zb0
 # docker compose
 localstack は docker で用意できる
 docker-compose.yml で環境変数も合わせて用意するのが良い
+
+
+### ports
+53 443, 4520-4530, 4566-4620
+docker-compose で - ハイフン指定するとその範囲のポートをexposeする
+
+## environment
+いろいろ環境変数をセットすると動作が変わる
+- SERVICE=serverless,cognito,rds,sqs,sns,cloudformation
+  - 色々機能を有効化出来る
+- DEBUG=1
+- DATA_DIR=/temp/localstack/data
+  - 用意した先のコンテナで、データを格納するところ
+- HOST_TMP_FOLDER=${TEMPDIR}
+- LAMBDA_EXECUTOR=docker
+
+## volumes
+データをdockerを落としたあとも永続化する
+
+- ${TMPDIR:-/temp/localstack}:/tmp/localstack
+  - `:-` 環境変数をセットしつつ、値を返す
+  - インラインで定義した変数を他で使える？
+- /var/run/docker.sock/var/run/docker.sock
+
+
+qiitaでわざわざ localstack の github repo を clone
+してそこのdocker-composeを使ってる例があったけど、
+適切に設定できるならdocker-composeを直接書けばいいので不要
+
+
+# run AWS-CLI 
+
+## Create S3 Bucket
+
+`--endpoint-url` フラグにlocalstackのURLを指定しつつ実行する
+
+```sh
+aws s3 mb --endpoint-url http://localhost:4566/ --region ap-northeast-1
+"s3://static-s3-bucket"
+```
+
+--region ap-northeast-1 は `aws configure` コマンドで設定しておくと省略できる
+
+## default url
+AWS のサービスはエンドポイントが決まってて、認証情報で操作先のリソースが変わる
+S3 のデフォルトは `s3.amazonaws.com`
+
+
+# Create DynamoDB table
 
 
