[nb] Edit: 20211029180636.md

--- a/20211029180636.md
+++ b/20211029180636.md
@@ -63,8 +63,59 @@ aws s3 mb --endpoint-url http://localhost:4566/ --region ap-northeast-1
 ## default url
 AWS のサービスはエンドポイントが決まってて、認証情報で操作先のリソースが変わる
 S3 のデフォルトは `s3.amazonaws.com`
+AWS CLI のデフォルトurlは変更できなさそう
+
+`awslocal` という、localstack で使うための薄いラッパーがあるのでこれを使うと良いかも
+
+https://github.com/localstack/awscli-local
+
+pip で install して bin へのパスを通す
+
+補完は聞かないので、`aws ~`でコマンド入力して戦闘に戻って local を足すと良い
+
+### alias
+
+```sh
+alias aws="aws --endpoint-url=http://localhost:4566"
+```
+completion 効かなくなるから微妙
+サブプロセスで実行しても戻ると消えるし
+
+### script 
+
+```sh
+#!/bin/zsh
+aws --endpoint-url=http://localhost:4566 $@
+```
+
+`$@` をつかうと、shell script 実行時の残りの引数全てを渡すので楽
+こっちのほうが良さそう(awslocal とかを使う必要もない)
 
 
 # Create DynamoDB table
+
+```sh
+aws dynamodb create-table --endpoint-url <url> --cli-input-yaml file://dynamoDB/table-definition.yml
+```
+
+YAML でも JSON でも OK
+YAML のほうが好き
+
+## Scan
+```sh
+aws --endpoint-url=http://localhost:4566 dynamodb scan --table-name "Music"
+```
+
+
+# IAM role
+
+~~localstack の free 版だと IAM 作れない？~~
+(本番クラウド用の url-endpoint に間違えてた)
+YAML でも JSON でも行けるっぽいけど、yamlの場合に日本語コメントが含まれてるとダメ(ascii 文字しか受け付けない)
+
+```sh
+aws iam create-role --role-name "aws-localstack-yt-tutorial" --assume-role-policy-document file://iam_role/execution-role.yaml
+```
+
 
 
