[nb] Edit: 20211029180636.md

--- a/20211029180636.md
+++ b/20211029180636.md
@@ -118,4 +118,93 @@ aws iam create-role --role-name "aws-localstack-yt-tutorial" --assume-role-polic
 ```
 
 
+# Introduce CDK
+aws-cdk を npm i -g
+また、localstack で使えるcliラッパーの `aws-cdk-local`もインストールする
+
+```sh
+npm i -g aws-cdk aws-cdk-local
+mkdir cdk-yt-tutorial && cd cdk-yt-tutorial
+cdklocal init sample-app --language typescript
+```
+
+# CDK project
+- lib/{appname}-stack.ts 
+  - 実際に色々クラスを定義する
+- bin/{appname}.ts
+  - エントリーポイント
+
+# cdk synth
+cdk により作成・管理されるリソースがどの様になるかYAMLで出力
+```sh
+cdklocal synth > out.yaml
+```
+
+# AWS SQS & SNS
+なんか最初から作られてた
+
+SQS = Simple Queue Service
+キューイングサービス
+第三者経由でデータを渡すことで送信者・受信者が好きなときに処理を行う
+他のサービスがSQSをポーリング。キューがあれば取得
+
+SNS = Simple Notification Service
+メッセージングサービス
+プッシュしたメッセージをHTTP,HTTPS,メール,`SQS`,モバイルプッシュで通知
+相手側にポーリングさせるのではなく、SNSがプッシュする
+サーバー、WebHookなどにオススメ
+
+# SNS 
+- Subscription
+- Topic
+- Metadata
+
+など、CDKによってデフォルトでポリシーが作られる
+
+# cdk bootstrap & deploy
+bootstrap コマンドはデプロイ前の準備のための、ポリシーなどを作る処理？
+deploy コマンドで実際にcdkで書いたリソースをデプロイする
+
+
+# AWS Cloudformation について
+
+https://qiita.com/iron-breaker/items/a12d1228de12663e7d32
+
+Cloudformation = IaaCみたいなもの
+- テンプレート(Stack)をJSONで書くと、その構成でAWSリソースを自動構築する
+- 同じ構成を何度も作り直せる(インフラのパッケージ化)
+- Stack を消すと、Stack内のリソースを一気に消せる
+
+AWS CDK のStackクラスを実装することは、この CloudFormationのStack JSONを書くことと等しい
+
+```sh
+aws cloudformation list-stacks
+
+{ "StackSummaries": [...]}
+
+aws cloudformation list-stack-resources --stack-name ...
+
+```
+
+
+# AWS Gateway
+
+デフォルトの @aws-cdk/core に含まれてないので、npm install する
+```sh
+npm i @aws-cdk/aws-apigateway
+```
+
+
+# API Gateway の Endpoint
+cdk deploy したときにAPI Gateway のエンドポイントが表示されるが、 local stack の場合はそのままのURLにアクセスしても呼び出せない
+
+```sh
+# localhost:4566/restapis/{rest-api-id}/{deploy-stage-name}/_user_request_/
+http :4566/restapis/pm0lmzuyt4/prod/_user_request_/
+```
+
+ローカルスタック用のこの形式で API Gateway にアクセスする(HTTP)
+覚えるべし
+
+
 
