[nb] Edit: 20211104011352.md

--- a/20211104011352.md
+++ b/20211104011352.md
@@ -7,3 +7,5 @@ CDKなどで作成したCloudFormationに対して、グラフィカルに確認
 
 
 AWS > CloudFormation > Stack > 詳細 > Template > Designer で表示
+
+`cdk synth` などで出力される YAML テンプレートからデザイナーを作ってるっぽいので、ローカルUIなどがあればそちらでも確認できそう？
