[nb] Edit: 20211107011318.md

--- a/20211107011318.md
+++ b/20211107011318.md
@@ -11,3 +11,72 @@ ECS でコンテナを起動する点は同じ
 インフラ管理が必要ない(EC2管理が)
 サーバーレス
 コンテナあたりのCPU/RAMを設定するだけ
+
+
+# ECS vs EKS vs Beanstalk
+
+
+ECS vs EKS
+- ECS は proprietary, EKS(k8s) はオープンソース
+- ECS は AWS システムによく統合されており連携しやすい
+- どちらも Fargate が使える
+- コンテナのフルパワー
+
+Beanstalk
+- PaaS
+- 決められた言語のコンテナ(Java, Nodejs, python, c#...)
+- カスタマイズ性は低い
+
+
+# ECS Cluster Overview
+- ECS は EC2 instance の論理的なグループ
+- EC2で ECS agenet を起動する(kubelet みたいなもの)
+- ECS agents は 自身を実行している EC2 isntance を ECS cluster に自己登録する
+- 特別なAMIを使う
+
+# ECS Agent の仕事
+- 自身を起動しているサーバーをクラスターに登録
+- CloudWatch Logs へイベント出力
+- ECR から image を pull & run
+
+# ECS Architecture
+
+- Public Subnet Only
+  - Public に Task をおいて、そのままアクセスできるようにする
+- Private / Public
+　- Public subnet には ALB や NAT をおいて、private に Task をおいてトラフィックを転送する
+
+# Creating IAM Role
+
+- Role
+  - EC2
+  - ECS
+  - ECSTaskExecution
+  - Autoscaling
+
+
+# VPC
+
+VPC
+  subnet -> IGW
+
+VPC を作って、AZごとにsubnetを作り、IGW を通じて外のネットワークと通信する
+CDK でやると自動で作られてるっぽいので意識する必要なし　
+
+# Deep dive
+
+## Task Definition
+- Task定義はJSONで書かれるメタデータ
+- 重要な情報を含む
+  - image name
+  - port binding
+  - memory/cpu
+  - environment variables
+  - netwoak info
+  - IAM
+  - logging config (ex CloudWatch)
+
+# Task Role
+タスクごとにAWSサービスへの権限を与えられる
+
+
