[nb] Edit: 20211118131832.md

--- a/20211118131832.md
+++ b/20211118131832.md
@@ -93,3 +93,15 @@ brew tap kong/kong
 brew install kong
 ```
 
+kong.yml と kong.conf は別物らしい
+
+Kong CLI でコンテナではなくホストマシンで実行する場合、 `/etc/kong`
+に kong.conf と kong.conf.default を置く?
+(実行時に場所とか指定できるのだろうか )
+
+# JWT 用語
+
+- issuer : JWT発行者(JWTサーバーとか)
+
+
+
