[nb] Edit: 20211119131833.md

--- a/20211119131833.md
+++ b/20211119131833.md
@@ -37,3 +37,17 @@ Lua Language Server では型推論やコード補完できない
 Lua のライブラリを使うか、ラッパーライブラリを探すか、気合で書くか
 
 
+# luarocks init のときに作られるファイル
+
+- lua : プロジェクト作成時に使った luarocks のモジュールをロードしつつ lua スクリプトを実行
+- luarocks : プロジェクトローカルにインストールする？
+
+普通に lua を実行するとモジュールをロードできないっぽいので注意
+
+
+# その他オプション
+
+Lua.diagnotics.globals : string array
+この項目に グローバル変数として利用する予定の値を書いておくと、グローバル変数を書いても警告が出なくなる
+警告が出てる状態の Quickfix で、 Mark as global を選んでも vscode settings.json に追加される
+
