[nb] Edit: 20211119160044.md

--- a/20211119160044.md
+++ b/20211119160044.md
@@ -6,8 +6,10 @@
 # --local or shellscript luarocks?
 
 --local オプションを付けても、プロジェクトローカルにインストールされない
+~リモートパッケージではなくローカルパッケージ(自分で書いたlua ファイル)の意味？~
+`$HOME/.luarocks` ディレクトリにインストールされる
 
-むしろ、リモートパッケージではなくローカルパッケージ(自分で書いたlua ファイル)の意味？
+local オプションを付けない場合は、管理者権限でアクセスできるルートディレクトリからlibとかにインストールされるっぽい？
 
 
 `luarocks init` で生成された `luarocks` シェルスクリプトを使って、 --local オプションを付けないでインストーするとプロジェクト内の `lua_modules` ディレクトリに入る
