[nb] Edit: 20211120111424.md

--- a/20211120111424.md
+++ b/20211120111424.md
@@ -32,3 +32,16 @@ web, jwt, grafana, influxdb, jaeger などを含んだ本格的な構成
 
 
 
+# 使用感
+
+- Kraken Designer の使い方がイマイチわかりづらい
+- バックエンドとサービスが一対一ではなく、サービス一つだけ、それに連なるエンドポイント1つ1つとバックエンドのエンドポイント一つ一つを関連付ける感じ
+  - 一括設定みたいな感じにできない(Methodごととか)なので面倒
+  - Designer の編集画面が設定多くて分かりづらい
+- JSON の記述方法もいまいち分かりづらい
+
+上級者向けかも　
+
+
+
+
