[nb] Edit: 20211120010428.md

--- a/20211120010428.md
+++ b/20211120010428.md
@@ -36,4 +36,15 @@ krakend : ファイルによる宣言的なルート、stateless
 https://stackoverflow.com/questions/60050154/how-good-is-krakend-compared-to-kong
 
 
+# krakend 使った感想
 
+サービスのエンドポイントとバックエンド自体を1対1にせず
+全てのエンドポイントを1対1(パス、メソッドまで)するのでめんどくさい
+
+
+# 最終的な考え
+
+- kong で十分
+- tyk も気になる
+
+krakend は興味なくなった
