[nb] Edit: 20211121163422.md

--- a/20211121163422.md
+++ b/20211121163422.md
@@ -220,3 +220,224 @@ Prometheus に関する指示、設定を全て定義する
   - 設定してないが重要な項目もある
     - metrics_path : 初期値は `/metrics` . ターゲット先の HTTP server の /metrics パスにメトリクスをpullさせるAPIが実装されていることを期待している
     - schema : HTTP がデフォルト
+
+
+# Exporters
+https://gyazo.com/13cdfa1f5aa91da08f0b9904a24ec056
+Prometheus のサポートライブラリによる実装を追加せずにmetricを取得できるようにするサイドカー的なプログラム(daemon?)
+
+- GO, Java, Python など様々な言語向けにライブラリがあるが、ない言語もある
+- 実際にコードにアクセス・管理できない場合がある
+という場合があるので、直接実装を追加することは実際にはbad practice
+
+色々種類がある
+- Linux Exporter
+- MySQL Exporter
+- ElasticSearch Exporter
+
+# Node Exporter
+unixシステム上のカーネルレベル、マシンレベルのメトリックを公開する、最も汎用的なExporter
+- 負荷
+- CPU 使用率
+- マザーボード温度
+
+docker コンテナで使える
+(他のプログラムと併用する場合は node_exporter バイナリを落として daemon として起動？)
+
+`localhost:9100/metrics` で取得できる
+node_ 接頭辞を持つ metrics を収集できる
+
+## WMI Exporter
+
+Windows Machine Instrumentation Exporter の略
+Windows システムのメトリクスを収集する
+Linux でなく Windows サーバーを使う必要があるときはこっちを使う
+
+
+# Querying Basics / Data Type
+
+PromQL に付いて深く学ぶ
+- できること
+  - メトリクスの取得
+  - フィルター、集計、計算
+  - SQL みたいな感じ
+　- サブ式の評価
+
+# Data Type
+- Instant vector : 同じタイムスタンプを共有する、単一のサンプルを含む時系列のセット
+  - https://gyazo.com/21fee2323885b3714d2326767e8b08ab
+  - これが時系列のセット(1つのサンプルを含む時系列)
+- Range vector : それぞれの時間経過に伴うデータポイントの範囲を含む時系列セット
+  - https://gyazo.com/50f450d15e4fc90efa38aa5524317633
+  - [1m] の範囲をPromQL に指定したことで、複数のデータポイント(サンプルを含む)時系列セットになった
+- Scalar : ラベルのない浮動小数点数値
+  - float
+  - ex, 15.
+- String : 文字列型
+  - ex. hello
+
+# Selectors & Matchers
+
+Prometheus サーバーには何百もの異なるラベル値の時系列がある。
+
+- process_cpu_seconds_total
+  - job="prometheus"
+  - job="node_exporter"
+job ラベルの異なる time series のうち、片方だけ表示したい
+
+```PromQL
+process_cpu_seconds_total{job="prometheus"}
+```
+このようにPromQLを書くことでフィルタリングできる
+PromQL と 検索結果の metric の形はすごく似ている
+GraphQL と JSON の関係のような感じ
+
+```PromQL
+process_cpu_seconds_total{job="node_exporter", instance="node:9100"}
+```
+PromQL はゼロから設計されており、SQLなど他のクエリ言語との互換性はゼロだが
+シンプルに作られているのですぐ学習できる
+
+
+## クエリ解説
+
+metric_name{label=value}
+
+metric_name の部分を time series selector
+{} の中身の部分を label matcher と呼ぶらしい
+
+そのままだと instant vector selector
+[] が付いて範囲指定だと range vector selector
+
+https://prometheus.io/docs/prometheus/latest/querying/basics/#instant-vector-selectors
+
+# Matcher Types
+
+2 つある
+
+1. Equality Matcher
+- = : Equality matcher
+- != : Negative equality matcher
+- =~ : Regular Exoression matcher
+- !~ : Negative regular expression matcher
+大文字小文字を区別する(文字列の場合)
+あいまい検索をしたいときは Regex matcher が役に立つ
+(regex が使えるのは右辺の string value に対して)
+
+
+2. Range Matcher
+`[1m]` `[2h]` `[3d]`
+など
+
+クエリの一番後に書く
+
+# Operators
+
+複雑なクエリ言語を構築するための演算子
+
+- PromQL
+  - Binary Operators
+    - 算術、比較、論理演算子
+    - 左右2つの項を取る
+      - +, -, * , /, %, ^(power)
+        - ベクトル同士、スカラー同士、あるいわvector * Scalar
+      - and, or, unless
+        - vector 同士で使う
+        - v1 and v2, v1 or v2, v1 unless v2
+
+  - Aggregation Operators
+    - 
+
+# 例.
+
+```PromQL
+node_memory_MemTotal_bytes/1024/
+
+key = v / 1024 / 1024
+```
+クエリで出力される Value が割られた値で表示される
+メガ、ギガバイト表記などに便利
+
+
+```PromQL
+prometheus_http_requests_total * 2
+```
+
+これはやってもあまり意味なさそうな計算
+
+```PromQL
+node_cpu_seconds_total > 1000
+```
+CPUが1000秒以上動いているものだけを抽出
+ラベルのところは多分文字列だけなので、マッチャーで Scalar値をフィルタリングはできないので
+こういう書き方をする
+
+比較演算子は、出力値に影響を与えず、真偽値が表示/非表示に関わる
+
+
+```PromQL
+# 2つの vector の合計が出る
+promhttp_metric_handler_requests_total or prometheus_http_requests_total
+
+# 何も出ない (お互いに一致する time series を持たないため)
+promhttp_metric_handler_requests_total and prometheus_http_requests_total
+
+# 左辺のvector が全て出る (全てが右辺に含まれていないため)
+promhttp_metric_handler_requests_total unless prometheus_http_requests_total
+```
+
+and, or, unless はベン図の計算、Set の intersect, union のような働きをする
+unless は 右辺のセットにない左辺のセットのようなイメージ
+
+
+# ignore & on keyword
+- ignorering()
+- on()
+これらを使うと、更に論理演算を拡張できる
+(論理演算子の後にしかかけない)
+
+## ignoring
+
+ignoring(label_name) selector...
+の書き方をする
+
+出てくる vector 要素から、ignoring()で指定したラベルを削除(無視)してand集計する
+and , or の基準は含んでいるラベルが一致しているかどうかなので、異なる time series 同士で and 演算ができたりする
+
+## on
+ignoring とは違い、on()で指定したラベルが一致するものだけ論理的操作
+
+
+# Aggregation operator
+情報を組み合わせるために使う特別な数学関数
+- sum
+- min
+- max
+- avg
+- stddev
+- stdvar
+- count
+- count_values : 同じ値をカウント
+- bottomk : 小さい順にk個の値 (k は第一引数で指定)
+- topk : 大きい順にk個の値 (上に同じ)
+- quantile
+
+# rate関数、irate関数
+irate(range vector) で 1秒あたりのレートを出力(グラフの傾き、比例なら定数)
+
+irate() : rate() と違い instant rate を計算する
+
+
+```PromQL
+sum(prometheus_http_requests_total) by (code)
+```
+
+# by operator
+集計演算子でまとめた結果を、by (label) で分ける
+集計演算子の後しか使えない
+
+# topk 関数
+
+```PromQL
+topk(3, sum(node_cpu_seconds_total) by (mode))
+```
