[nb] Edit: 20211129134154.md

--- a/20211129134154.md
+++ b/20211129134154.md
@@ -61,3 +61,12 @@ Greystone_Tough の SkeltalMesh を選択
 
 LOD と Collision をチェックから外して Export
 
+# Blender で編集
+
+Greystone_Tough のモデルから剣と盾だけ抜き出して使いたい
+また、剣と盾を含まないモデルも作って、装備をカスタムしたい
+
+- fbxをexport
+- blenderで開く
+- Edit > Material > ~_ToughSword > Select (Materialがついてるとこだけ選択)
+- 剣と盾をそれぞれ投げ縄やbox選択してcmd+P > Separate by selection
