[nb] Edit: 20211129134154.md

--- a/20211129134154.md
+++ b/20211129134154.md
@@ -70,3 +70,169 @@ Greystone_Tough のモデルから剣と盾だけ抜き出して使いたい
 - blenderで開く
 - Edit > Material > ~_ToughSword > Select (Materialがついてるとこだけ選択)
 - 剣と盾をそれぞれ投げ縄やbox選択してcmd+P > Separate by selection
+
+
+## Blender から FBX をexport する
+export 時に色々オプションが出てくる
+
+- Include
+  - Limit to
+    - selected objects
+  - Object type
+    - Armature
+    - Mesh
+
+選択しているオブジェクトだけ
+Mesh と Armature だけ
+
+- Geometory
+  - Smoothing
+    - Face
+  - Apply Modifier
+
+面スムースをかけてModifierは適用してメッシュに変換する
+(非破壊モデリングしてるときは重要)
+
+- Bake Animation: off
+- Add Leaf Bone: off
+  - https://blender.stackexchange.com/questions/119798/what-are-leaf-bones-collada-import-question
+  - 殆どのファイルフォーマットはボーンの長さを保存しない。(child bone との距離でわかるから、無駄なデータを省く)
+  - ただし、末端ボーン(頭、指など)の場合は子ボーンがないので長さが完全に破棄される
+  - 末端ボーンの先に leaf bone を付けることで長さ情報が失われるのを防ぐ
+  - 最終的なアセットとして出力予定で、他のソフトでボーン編集する必要がないのなら不要なオプション
+
+# Unreal に FBX を import
+`_Main/Player` フォルダを作って入れる
+(ついでに BP_HeroCharacterも)
+
+import 設定
+- Skelton = GreyStone_Skelton (既にあるBPクラス)
+- Material
+  - Do not create new material
+  - texture import = off
+
+
+設定できたら import all
+
+# Edit Sword & Shield
+
+## sword
+yz 軸に平行に
+剣先をz軸上に向ける
+剣の柄をxy平面に付けるように原点をセット
+
+## shield
+持ち手を-x軸
+盾の正面をx軸
+後は剣と一緒
+
+## export
+人のメッシュと違い、Armature は無いので単一選択で別々にExportする
+- `_Main/Pickups/Swords/sword01.fbx`
+- `_Main/Pickups/Shields/shield01.fbx`
+
+import 設定
+- SkeltalMesh = off 
+  - (StaticMeshnになる。アニメーションで変形しないメッシュはこれを使う)
+- Do not create Material
+- Auto Generate Collision = off
+  - 自動生成するより、自分でコリジョンを作ったほうがゲームバランスを調整しやすい
+
+# Material を適用
+
+Tough Sword Material が 剣と盾両方のUV情報とテクスチャマッピングを持つ
+FBXの場合、Blenderでメッシュの離れたパートを別オブジェクトに分離するような編集をしても、頂点の持つUV空間座標の情報はなくならない
+分離したものをそのままimportして、同じマテリアルを適用する
+
+# StaticMesh に Physics を適用
+- Shield StaticMeshを開く
+- アプリメニュー > Collision > Add simplified box Collision
+- save
+- level に盾追加
+- details > Physics > on
+
+Play すると落ちる
+
+
+# Edit BP_HeroCharacter
+
+Full Blueprint editor を開くと、viewport や event graph なども含む
+Components タブは様々なクラスの親子ツリー
+
+- 一番上の self を選んで Pawn > Use Controller Rotation Yaw を off
+Yaw = ゆー
+- Capsule Component を選んで > Collision Presets を custom
+- Cllision Responses > camera を ignore に(一番左)
+- Mesh Component を選択 > Tough_Mine をセット
+  - Capsule とずれてるので、メッシュを合うように移動
+  - ある程度合わせたら、Grid snap を無効にして微調整
+
+できたらTestLevelにドロップ
+
+ProjectSettings 
+- Anti aliasing method : FXAA
+- Auto Exposure : false
+
+にしていた。どういう意味かは不明だがなんかレンダリングに関するやつ
+
+
+## Camera & SpringArm
+
+BP_HeroCharacterのCapsuleの子要素に、
+- SpringArm
+  - Camera
+で追加
+
+SpringArm の UsePawnControlRotation を on
+SpringArm の高さを調節
+
+UsePawnControlRotation は、多分 Pawn の回転に合わせて回転するってこと
+
+
+テストレベルにHeroをおいた状態で実行
+何もおこらない
+
+
+# Event Graph の編集
+
+BP_Hero のBPイベントグラフを編集する
+最初にあるイベントは全部消す
+
+## ProjectSettings > Input > Bindings
+- Action Mappings
+- Axis Mappings
+の2種類がある
+前者は発火
+後者は軸強度(+-がある)
+
+ResetVR だけ使わないので消しても良いかも
+今回はデフォルトでOK
+
+## Node を作る
+BP > Graph editor
+エディタ上で右クリから作れる
+検索する Input > InputAxis > ...
+
+Turn と LookUp の Event を追加 (マウス移動)
+MoveFoward と MoveRight を追加 (キーボード移動の軸)
+
+# CharacterMovement Component Class
+BP_Hero(self) のクラスツリーにはなく、下の方の列にある
+めちゃ重要
+動き、Capsule(とそれ以下の子要素)の回転、移動速度などに関与する
+設定値をちゃんとしないとデフォルトではいい感じに動かない
+
+
+- Rotation Setting
+  - RotationRate.z = 720
+  - Use Controller Desired Rotation =  true 
+    - コントローラーのrotationを望ましい方向に向ける
+    - これをチェックしないと子要素が回転しない
+  - Orient Rotation to Movement = true
+    - Movement で移動した方向を正面にしてカプセルが移動する
+    - false にするとそのまま設定した向きになる
+    - desired rotation と組み合わせないと意味ない？
+
+- Walking
+  - あるきの設定
+  - Max Walk Speed = 500
