[nb] Edit: 20211129134154.md

--- a/20211129134154.md
+++ b/20211129134154.md
@@ -236,3 +236,12 @@ BP_Hero(self) のクラスツリーにはなく、下の方の列にある
 - Walking
   - あるきの設定
   - Max Walk Speed = 500
+
+# Simple Animation
+
+Player ディレクトリに Create > Animation > Animation Blueprint
+名前は`AnimBP_Greystone`
+
+Event Graph と AnimGraph があるが、まず Event Graph から設定していく
+
+
