[nb] Edit: 20211129134154.md

--- a/20211129134154.md
+++ b/20211129134154.md
@@ -244,4 +244,17 @@ Player ディレクトリに Create > Animation > Animation Blueprint
 
 Event Graph と AnimGraph があるが、まず Event Graph から設定していく
 
+## event graph
+
+- TryGetPawnOwner
+  - AnimBP が Pawn の Awner を探そうとする
+  - 出力値はObject, 不正値の可能性もあるが、別のObject入力ノードに使える
+- IsValid?
+  - if文みたいなもの
+  - Object を入力、2つの exec path を出力
+- Sequence
+  - Exec path を複数出力
+  - 上から順番に実行
+- GetVelocity
+  - Object から velocity プロパティを取得
 
