[nb] Edit: 20211129134154.md

--- a/20211129134154.md
+++ b/20211129134154.md
@@ -280,3 +280,15 @@ AnimGraph でStateを使ってAnimationの遷移を実装
 Create > Node > new StateMachine
 クリックすると中にはいって編集
 
+State には名前をつけられる
+- Idling
+- Jogging
+
+また、矢印を引っ張って遷移を作れる
+遷移を作ったらまた中に入って編集できる
+中身自体は BP なので、BP_HeroCharacter で作った Valiable を使って遷移を実装する
+
+- Speed > 1 ならjogging
+- Speed < 1 なら Idling
+
+ 
