[nb] Edit: 20211129134154.md

--- a/20211129134154.md
+++ b/20211129134154.md
@@ -288,7 +288,257 @@ State には名前をつけられる
 遷移を作ったらまた中に入って編集できる
 中身自体は BP なので、BP_HeroCharacter で作った Valiable を使って遷移を実装する
 
-- Speed > 1 ならjogging
-- Speed < 1 なら Idling
+- `Speed > 1` ならjogging
+- `Speed < 1` なら Idling
 
- 
+
+# First Multiplayer Logic : Splint
+
+Server - Client システム
+不正を検知するため、Client がやりたいことを Server に伝え、Serverがそれを可能かを検証してStateを更新する
+(チートで異常なスピードで動いたりできないように)
+
+## Add Sprint Action
+
+Shift key を Sprint Action にマッピングする
+
+## BP Function
+
+左のメニューから、Variable と同様に Function も作れる
+Detail から Input を足すと、引数として node のピンを作れる
+
+
+## Custom Event
+
+Node > Create > Custom Event
+detail から Replicates > Run on server (Reliable) とする
+
+https://gyazo.com/73d6ede7402761050424fef91bc337e1
+
+ローカル呼び出し(shift pressed/released)と、サーバー呼び出しの3つのコールを作る
+
+## Switch Has Authority Node
+
+UE4 はもともとオンラインマルチプレイゲームを想定する
+BP Character Class はプレイヤーキャラクターを操作するのがサーバーかクライアントか判別する機能を持つ
+
+https://gyazo.com/07d528e7870c8736ff11701b881a4d0e
+
+F_SprintSwitch 関数を呼び出すのがサーバーならイベント発火 > クライアントも呼び出し
+クライアントなら自分のところでだけ実行(イベント発火不要)
+
+
+# Play Option
+Play ボタンから実行する時、以下のオプションを選べる
+- Play Standalone
+- Play as Listen Server
+- Play as Client
+
+一番下の Play as Client を開くと、指定したクライアント数+1サーバーが起動する
+はっきり言ってオンラインゲームを作るハードルはすごく低い(かんたんという意味)
+
+
+# Interface
+
+Interface を実装しているClassは同じような扱いができる(Generic Programming)
+BPでも使える
+- BP Class
+
+## 作業
+
+- `_Main` に `Interfaces` dir を作る
+- 右クリ > Blueprint > Blueprint Interface
+- `INT_HeroAnimBP`にリネーム
+- `AnimBP_Greystone` を開く
+  - 上メニュー > Class Settings > Detail > Interface Add > INT_HeroAnimBP
+
+## Interface Blueprint の編集
+プログラミング的な行為はできない
+ReadOnly
+右のDetail カラムから関数を追加することしかできない
+
+## 作業
+
+AnimBP_Greystone の Eventgraph を開く
+
+## Cast vs Interface
+
+BP のバックエンドは C++ であり、クラスを別のクラスにダイナミックキャストできるが、パフォーマンスが犠牲になる
+Interface を使うとパフォーマンスは損なわれない(らしい)
+
+## Interface の使いみち
+
+Interface の実装は、Class Settings で追加した Interface BP の関数呼び出しに対する Event Node をBPに追加すること
+
+関数呼び出しをイベントとして扱う
+引数があればそれも入力される
+
+
+# BP Variable / RepNotify
+Variable の Detail にある Replication の mode を RepNotify にする
+すると、 `OnRep_変数名` 関数が自動でコールされる
+(いわゆるSetter)
+
+この`OnRep_変数名`関数は、自分で作っても意味ない
+RepNotify を変数にセットした場合に自動で作られるのでそこに実装を書く
+
+
+# Rolling
+普通のゲームだとx(o)ボタンはジャンプが割り当てられたりする
+
+SoulsLikeなゲームだと、回避行動(ローリングに使う)
+回避、回避後攻撃などなど
+とにかく重要な要素
+
+
+## Animation Data(FBX)をインポート
+import設定は、Skelton -> GreyStone_Skelton だけ
+
+## Edit Animation
+Bone tree > root を選択
+タイムラインを0frame -> Key(上メニュー)
+タイムラインを最終frame -> Y軸前方にちょっと動かす -> Key -> Apply
+Detail -> Enable Root Motion
+
+Enable Root Motion を使うことで、Animation でボーン位置が移動することで Character 自体の位置を操作できる
+
+## Animation Montage
+Greystone_Role アニメーションを右クリ > Create > Montage
+Montage にすると何が良いかというと
+Animation BP の Slot Node にセットできる？
+
+AnimBP の Anim Graph でモーションブレンディングを行うときは、Slot Node を使うのでその形態に合わせないといけない
+
+
+Montage を作成したら、Montage を開いてタイムラインの Slot name を DefaultGroup.FullBody に変更する
+(Montage editor を開き直さないとデフォルトポーズになるバグが有る(Unrealengineに))
+
+# Project Setting: Rolling
+
+Rolling Action を Space にセット
+(イベントで利用するため)
+
+# Animation Montage
+montage = つなぎ合わせたもの、切り貼り
+https://detail.chiebukuro.yahoo.co.jp/qa/question_detail/q12202360627
+
+モンタージュ = フラグムービーともいう
+FPSなどのキル集
+スマブラのオナリプも同義？
+
+UnrealEngine では、
+https://docs.unrealengine.com/4.27/en-US/AnimatingObjects/SkeletalMeshAnimation/AnimMontage/
+
+コードやBPでアニメーションコントロールを公開する機能のこと。
+アニメーションループ、ロジックベースアニメーションブレンド、などを実現するために使う。
+
+例. 銃のリロードアニメーション
+https://docs.unrealengine.com/4.27/en-US/AnimatingObjects/SkeletalMeshAnimation/AnimMontage/Overview/
+
+任意の段数をリロードする場合、
+- ReloadStart
+- Reload (xN)
+- ReloadEnd
+
+のようにたまを込める部分だけ任意の回数ループさせるような仕組みにすると便利(これがモンタージュの利点)
+また、モンタージュのタイムラインにイベント発火を仕込める(サウンド、コードへのアクセス)
+
+
+# Animation BP: Slot
+https://forums.unrealengine.com/t/what-the-hell-is-a-slot/18095
+何に使うか分かりづらいという声
+
+
+参考になる動画
+https://www.youtube.com/watch?v=6aZbnldZjeM
+
+Slot Node は、BP の 1 ノード
+
+- Source : Pose
+- Out : Pose
+- Props
+  - SlotName
+    - DefaultGroup.
+      - FullBody
+        - InAir
+        - OnGround
+      - UpperBody
+        - ...
+
+SlotName に Lower body はなかった
+多分 FullBody と　UpperBody の組み合わせでなんとかなるということか
+
+役割は、SlotName(ボーンの集まり)とMontageを指定することで、SourcePose を Montage で上書きしたPoseを出力すること
+
+# Animation BP : CachedPose
+
+全身アニメーションに、上半身だけ別のPoseで上書きしたい場合、
+
+`FullBody + (FullBody overrided UpperBody)`
+
+のように、ブレンドのため2回FullBody Poseを使う必要がある。
+ただし、 `Animation Pose` value の pin は一回しか繋げない。(別の場所につなぐと以前の部分はbreakされる)
+
+数回使うには、Create CachedPose Node を使い、その後に Use Pose Cache Node を使う
+
+# Create Blend Motion
+
+https://gyazo.com/9942fcea1376fae37b2d32e8e36798f3
+
+Tutorial の命名がちょっと悪いところがあったので変えた(多分後の展開で意味があるが、いまだと意味不明なやつ)
+UpperBodyCache -> GroundMotionCache
+
+- GroundMotionCache
+  - 以下2つをブレンド
+  - GroundLocomotion (Statemachin, out AnimationPose)
+  - UpperBody Slot (no montage)
+- FullBody Slot (Rolling)
+
+IsRolling が
+true なら FullBody overrided StandingMotionCache(つまりRolling)
+false なら StandingMotionCache
+を再生する
+
+ぶっちゃけ Blend でやらなくて良い気もする。。
+実際、Slot の部分の Input pin を外してもローリングしてた
+(なお、ローリングした後初期ポーズになるがこれはおそらく IsRolling を元に戻す処理がないため)
+
+
+# MultiCast Event
+
+BP で、 Create > Custom Event で作れるイベントの Detail に、
+Replicates > Multicast
+にするとマルチキャストイベントになる
+
+https://ja.wikipedia.org/wiki/マルチキャスト
+主に、特定の複数ねとワーク端末(ノード)に対して同時にパケットを送信すること
+Unreal BP 的には、自分にもメッセージを送る(多分)
+
+### multicast vs broadcast
+multi -> 特定の複数端末
+broad -> 不特定多数の端末
+どちらも多数のノードに低負荷でデータを送信することを目的としている
+
+broadcastはネットワークに対して行い、そのネットワーク下にあるノード全てに送るのでネットワーク内の特定の端末を弾くとかできない。
+(例. ゲーム用PCにだけ送り仕事用PCには送らない)
+
+
+# HeroCharacter BP 実装
+
+https://gyazo.com/dd30b5a19b2e47056e6ceb6a88462e1b
+https://gyazo.com/4ef8e220dafc4b978e7b7e90ba38b9fe
+
+- Space ボタンを押す > Rolling action event
+- 現在 Rolling してない状態だったら、`Server_Rolling` カスタムイベント発火
+- サーバーの `Rolling` 変数を更新して、 `Multi_Rolling` イベントを発火(クライアント側でアニメを再生する実処理を呼ぶ)
+- Hero_Character.Mesh の AnimBP Instance を取得して、RollingState を更新(intf), State が true なら Montage を再生
+
+
+# Montage と Slot の関係
+
+1つのSlotName にいくつも Montage を設定できると思われる
+Play Montage すると その Slot でモンタージュが再生される
+(他のMontageは排他的にstop?)
+
+
+
