[nb] Edit: 20211129134154.md

--- a/20211129134154.md
+++ b/20211129134154.md
@@ -541,4 +541,58 @@ Play Montage すると その Slot でモンタージュが再生される
 (他のMontageは排他的にstop?)
 
 
+# Basic Attaking
 
+R1 攻撃、R2 攻撃の実装
+
+## BP Enum
+
+`_Main` dir > 右クリ > Create > Blueprint > Enumeration
+以下の3つのenumを作る
+- LightAttack
+- HeavyAttack
+- Blocking
+
+名前は `E_PlayerAttacks` (接頭辞は Enum の E?) 
+
+## attack action
+project settings > action mapping
+- Primary : LMB
+- Secondary : RMB
+
+マウスボタンに攻撃アクションを仕込む
+
+## Server Attacking State
+## Valiable Category
+BP の左サイドバーから変数を選んで、Detailのところから
+
+
+# Switch on Enum Node
+
+Enum を入力にして、Switch 文を実行
+出力ピンがEnumの数だけできる
+
+# Light Attack のモンタージュを用意
+
+Paragon の Attack_PrimaryA を使う
+ソウルシリーズだと普通は攻撃アニメーションはループモーションになってるが、
+今回使うアセットだとループしないので我慢
+モーションパックとか買うと良いかも
+
+
+# Layered blend per bone Node
+
+AnimGraph で使える BP ノード
+Bone を指定して直接Blend する
+(今まで使ってた Slot はプリセットボーンセットみたいなもの)
+
+Detail > 0 > Branch Filters に要素を3つ追加して編集
+Bone Name と Blend Depth を設定
+- pelvis
+  4
+- thigh_r
+  -1
+- thigh_l
+  -1
+
+Mesh Space Rotation : on
