[nb] Edit: 20211129134154.md

--- a/20211129134154.md
+++ b/20211129134154.md
@@ -596,3 +596,105 @@ Bone Name と Blend Depth を設定
   -1
 
 Mesh Space Rotation : on
+
+
+#  How to Debug
+
+Unreal Engine の Blueprint プログラムをデバッグする方法
+
+- Breakpoint : 右クリ > Add breakpoint or F9 
+  - node にブレークポイントを設置。実行中に一時停止する
+
+- Print String Node
+  - 開発時のみ機能するノード。入力した文字列をコンソール表示
+  - Object DisplayName Node など、文字列以外も文字列に変換して入力する必要あり
+  - 異なる型のpinにつなごうとすると自動で型変換してくれる場合もある(int -> string)
+
+### Browse
+BP クラスや Mesh, Montage などを編集しているときに Browse を置くとファイルエクスプローラーのそのファイルのある場所を開く
+
+## Debug Tips
+
+Branch Node などで実行しないで打ち止めになるブランチの方にもPrint String などをつないでおくと、デバッグしやすい
+エラーコードなどあると良い
+
+# BP_BasePickup Class
+`BaseClasses` dir に新しいBlueprint Classを作る
+開く
+Detail > 設定を変更
+- Actor Tick
+  - Start with Tick : false. true だと開始時にTickが実行される？falseだと後で実行？
+- Replication
+  - Replicate movement : true. true だと(多分)ネットワークの全てのクライアント・サーバーで location が同期される
+  - Replicates : true. true だと remote machine に複製される(あるclient local で作ると別の サーバー・クライアントでも作成される?)
+- Actor
+  - Can be Damaged : false. true だと Damage Event が起こる
+
+## Pickup component
+add component > Static mesh > rename to Item > move to root
+
+https://gyazo.com/33c9fcd6133fe1da45ca2488802412d4
+
+Sphere Collision (アイテムの拾える範囲判定)を追加
+
+Unreal Engine では Mesh にも Collision Shape にも Collision 設定がある
+両方設定する
+
+- Item
+  - Can Character Step Up : false
+  - Collision Preset > Custom
+    - 全て Ignore にした後、 WorldStatic と WorldDynamic だけ Block にする
+- Sphere
+  - Collision Preset > Custom
+  - 全て ignore > pawn だけ Overlap
+
+# Collision Response の違い
+- Ignore : 完全無視
+- Overlap : 物理的な干渉はしないが、重なった検知はする。センサー
+- Block : 物理的な干渉をする
+
+# ClassSettings vs ClassDefaults
+
+BP ファイルを開いたときは ClassDefaults が開かれている
+
+- ClassSettings : 親クラス、継承、BP option, Interface 関連など、Classのメタ情報を扱う
+- ClassDefaults : Unity の Inspector に近い。クラス定義で exporse されているフィールドに初期値を設定したりする
+
+
+# INT_Pickups
+
+Blueprint interface を追加する
+function を追加
+- DisablePhysics
+
+コンパイルしたら BP_BasePickup にInterface Eventを追加
+
+## Collision Detail > Events
+Detail パネルを見ると、Events カラムに
+`Event名: +` みたいな感じの列がある
+押すと Event Graph にノードが追加
+
+# Debug Collision
+
+https://gyazo.com/4542db2cea5fdc5f6a946d8dfdee8ae3
+
+BP クラスを scene tree に instance 化する
+その中で、Detail > Sphere > Hidden In game を off にする
+すると collision が見える
+デバッグに便利
+
+
+# Actor Tag
+
+Actor Class の Detail で、Tag を追加する
+(CollisionでActorのタイプを判定するのに使う)
+`Player`を入力しておく
+
+
+# Blueprint Structure
+`_Main/Pickups` dir で 右クリ > Blueprint > Structure
+構造体を定義できる
+BPの値の受け渡しで使える
+
+Item の情報をこれで作る
+
