[nb] Edit: 20211129134154.md

--- a/20211129134154.md
+++ b/20211129134154.md
@@ -698,3 +698,18 @@ BPの値の受け渡しで使える
 
 Item の情報をこれで作る
 
+
+# Get Struct member -> Break Structure
+
+Break Structure Node を使うと要素を分解してプロパティを取得できる
+
+
+# INT_SoulsController
+
+重なったアイテム名の表示はUIで行いたい
+つまり、HeroCharacter BP で行うのではなく UI BP でやりたい。
+
+
+一旦、GameMode BP (SoulsController BP) に送ってそれ経由でUIに表示情報を渡す
+Interface を定義して、Event発火を呼び出して渡せるようにする
+
