[nb] Edit: 20211206160938.md

--- a/20211206160938.md
+++ b/20211206160938.md
@@ -199,6 +199,10 @@ Vertex メニューからスムージングできる(右クリ > Smooth Vertices
 https://www.youtube.com/watch?v=foOWif4nywA
 
 かなり必見
+比率とかも参考になる
+(つま先 = 足全体の3/1)
+指の長さ = 足全体の5/1
+土踏まず
 
 - Circle > 8角形
 - Extrude > 2m くらい
@@ -211,3 +215,41 @@ https://www.youtube.com/watch?v=foOWif4nywA
 - Pivot > Indivisual Origin > Scale X で広めに
 - つま先を作るため更に Extrude > Scale X で狭めに
   - 3面を選んで押し出していたが、狭くした影響で斜めの面を合わせて5面見えるので、これを5本の指にする
+
+
+# Select Loop Inner Region
+
+https://gyazo.com/bdc8f4e19a521b80a6fd6f1c556be9b8
+
+Select > Select Loop > Inner Region とすると、ループの内側の頂点全てを選択できる
+
+# Select More / Less
+
+選択しているところから広がるように選択
+
+Ctrl  + Numpad + or Numpad -
+
+ただし、numpadが使えないパソコンだと無理
+デフォルトのCtrl+/-のズームはマウススクロールで代用できて不要なので、
+設定変更しても良いかも
+
+
+# Subdivision で丸まってしまう部分の修正
+指の中心にループカットを入れて解決
+親指、小指はループカットできるが、中指人差し指薬指でやろうとするとJoinした体の方まで余計なループカットが入ってしまう
+Subdivide と cmd + j で指の根本と指先の辺に手動でカットを入れる。
+その後は、隣り合う5角形を台形含む4角形にカットするテクニック
+
+# 髪の毛を作る
+
+Mesh で最初から作るより、カーブで大まかに作った後にメッシュに変換するのが良い
+
+- 頭頂部に3dカーソル
+- Add > Curve > Path
+
+# Curve Edit Overlay()
+
+Overlay アイコンから、
+Curve Edit > Normal をチェックするとゲジゲジが出る
+これは矢印を示しており、始点と終点を示す
+
