[nb] Edit: 20211208232956.md

--- a/20211208232956.md
+++ b/20211208232956.md
@@ -5,6 +5,31 @@
 docker hub のようなもの
 Githubがホスティングしている
 
+
+# レジストリドメインとコンテナタグの関係
 ghcr.io のドメインをコンテナタグの最初に付ける
 (GCP なら `gcr.io`, AWS なら `ecr.io` ...)
+
+
+Docker の push/pull コマンドにおける タグのprefix domainはかなり重要そう
+ghcr を gchr と間違えたら、pushできなくなる.
+
+
+# Price
+
+OSS ならタダっぽい
+Private Registory でも 500MB までなら無料
+データ転送(pull?)は月に1GBまで
+https://github.com/features/packages#pricing
+
+# CR_PAT
+Container Registry Personal Access Token
+普通はレジストリにpushするプロジェクトごとにアクセストークンを作るのが良い
+secrets として CI に仕込む
+
+# Packages Section
+
+ghcr にpushすると、repogitory page に Packages タブが現れるのでそこから確認できるらしい
+https://blog.bitsrc.io/using-github-container-registry-in-practice-295677c6f65e
+
 
