[nb] Edit: 20211208232956.md

--- a/20211208232956.md
+++ b/20211208232956.md
@@ -32,4 +32,8 @@ secrets として CI に仕込む
 ghcr にpushすると、repogitory page に Packages タブが現れるのでそこから確認できるらしい
 https://blog.bitsrc.io/using-github-container-registry-in-practice-295677c6f65e
 
+と思ったら、自分のプロフィールページにあった
+https://gyazo.com/ea2fc2bc6270beb12ee090f969a7549f
+
+ここからタグ名を検索して、デプロイ先から docker コマンドを使って ghcr にログインし、pullする
 
