[nb] Edit: 20211209010056.md

--- a/20211209010056.md
+++ b/20211209010056.md
@@ -52,7 +52,11 @@ echo を使って特殊なコマンドを標準出力に表示することで、
 なので必須テクニック
 
 
+他に global で使える変数は env フィールドにセットするものだが、
+これは静的なものなので runtime で変化する値には対応できない
+
 # 参考
 
 https://qiita.com/chanhama/items/415a0a26bbb186efc47a
+https://qiita.com/KEINOS/items/145973e868ba72d716dc
 
