[nb] Edit: 20211208232956.md

--- a/20211208232956.md
+++ b/20211208232956.md
@@ -27,7 +27,7 @@ Container Registry Personal Access Token
 普通はレジストリにpushするプロジェクトごとにアクセストークンを作るのが良い
 secrets として CI に仕込む
 
-# Packages Section
+# Packages
 
 ghcr にpushすると、repogitory page に Packages タブが現れるのでそこから確認できるらしい
 https://blog.bitsrc.io/using-github-container-registry-in-practice-295677c6f65e
@@ -37,3 +37,32 @@ https://gyazo.com/ea2fc2bc6270beb12ee090f969a7549f
 
 ここからタグ名を検索して、デプロイ先から docker コマンドを使って ghcr にログインし、pullする
 
+## Link Package to Repogitory
+
+ghcr というより Github Packages の機能になるが、パッケージのページで Repo と紐付けることができる
+Github Repogitory ページの右の欄から packages が表示されて、リンクで飛べるようになるので便利
+
+# GHCR から Image を pull するには
+`docker login` コマンドで ghcr.io にログインが必要
+Password に Github Personal Access Token (PAT) が必要
+
+```sh
+docker login <server> --options...
+
+docker login ghcr.io -u <username> --pasword-stdin
+# パスワードを入力
+```
+
+
+# DockerHub vs GHCR
+
+https://qiita.com/zembutsu/items/e92a2e2f46b147e5a206
+DockerHubは最大級の container registry ではあるが、イメージポリシーが更新され
+アクティブではない(push/pullされてない)イメージを削除する方針になった
+GHCR はその制限を回避できるかも？
+
+
+
+
+# 参考
+https://qiita.com/zembutsu/items/1effae6c39ceae3c3d0a
