[nb] Edit: 20211208232956.md

--- a/20211208232956.md
+++ b/20211208232956.md
@@ -49,9 +49,14 @@ Password に Github Personal Access Token (PAT) が必要
 ```sh
 docker login <server> --options...
 
-docker login ghcr.io -u <username> --pasword-stdin
-# パスワードを入力
+# git config --global で user と password が設定されてる場合、認証情報を入力しないでログインできる
+docker login ghcr.io
+
+# CI などで、ファイルに保存されている or echo コマンドでパイプしたパスワード文字列を自動入力したい場合
+
+cat ~/ghcr_password.txt | docker login ghcr.io -u <username> --password-stdin
 ```
+
 
 
 # DockerHub vs GHCR
