[nb] Edit: 20211215152829.md

--- a/20211215152829.md
+++ b/20211215152829.md
@@ -1,11 +1,55 @@
+# ステートフルなWebアプリケーションをスケールアウトする方法模索
+
 # AWS ECS: Dynamic Port Mapping
 
 AWS ECS のコンテナのネットワークモードが host, bridge のときに使える
 containerPort にマッピングする hostPort の値を 0 にすると、エフェメラルポート (必須じゃない適当なポート、6万個ぐらい)に自動割当する
-
 ECSを構成するノードに Public IP を振っておけば、コンテナに動的にエンドポイント(Public IP + port)を与えることができる
+
+これを使えば、コンテナ生成時に Public IP + Port がわかるので、DynamoDB などに登録してユーザーにクエリさせれば接続先がわかる？
+
 
 ただし、Fargate を使う場合はネットワークモードが `awsvpc` しか選べないので、これは使えないっぽい
 
 
 https://docs.aws.amazon.com/ja_jp/AmazonECS/latest/bestpracticesguide/networking-networkmode.html#networking-networkmode-awsvpc
+
+# AWS ECS: Fargate + Public IP option
+
+assignPublicIP: true にしてデプロイ
+Faragate Task の ENI 一つ一つに Public IP が振られる
+
+IP の上限数がよくわからなくて怖い
+
+## そもそも Fargate である必要?
+EC2 instance vs Fargate
+- 価格
+  - EC2 はリザーブドなリソース。借りてる間はリソースをしっかり使わないと損
+  - Fargate は起動している間だけ課金 (CPU Core, memory)
+- https://aws.amazon.com/jp/blogs/news/theoretical-cost-optimization-by-amazon-ecs-launch-type-fargate-vs-ec2/
+
+
+# Public Subject + Fargate(ENI) の最大数
+
+ちょうど、探していた内容の stackoverflow の投稿
+https://stackoverflow.com/questions/58944699/are-fargate-ecs-task-public-ip-addresses-limited
+
+- Fargate について
+  - public IP なしの場合は 最大 5000 の ENI
+  - public IP ありの場合は 最大 100 のENI
+- EC2 について
+  - awsbpc : VPC の制限の 5000 ENI まで作れてそれぞれ Public IP を割り当てられる
+  - host/bridge : Public IP をインスタンスに割り当てられるし、dynamic port mapping でそれ以上にサービスを展開できる
+
+
+# 番外: ngrok
+https://qiita.com/sakazuki/items/aff43a8c4d4571600404
+
+いわゆるリバースプロキシ
+- 固定IPの無いウェブサービスから、ngrokに接続
+- ngrok がそのサービスのポートを開放、通信を中継
+- 一時URLが発行される
+- クライアントはそれを使って接続
+
+ちょっとコスト掛かりそうなのと、
+複雑性が増すのはどうなの？という感もある
