[nb] Edit: 20211215152829.md

--- a/20211215152829.md
+++ b/20211215152829.md
@@ -34,9 +34,10 @@ EC2 instance vs Fargate
 ちょうど、探していた内容の stackoverflow の投稿
 https://stackoverflow.com/questions/58944699/are-fargate-ecs-task-public-ip-addresses-limited
 
+起動タイプによりサービス枠
 - Fargate について
   - public IP なしの場合は 最大 5000 の ENI
-  - public IP ありの場合は 最大 100 のENI
+  - public IP ありの場合は 最大 100 のENI (public IP ありの Fargate のサービス枠がつかわれる)
 - EC2 について
   - awsbpc : VPC の制限の 5000 ENI まで作れてそれぞれ Public IP を割り当てられる
   - host/bridge : Public IP をインスタンスに割り当てられるし、dynamic port mapping でそれ以上にサービスを展開できる
@@ -53,3 +54,11 @@ https://qiita.com/sakazuki/items/aff43a8c4d4571600404
 
 ちょっとコスト掛かりそうなのと、
 複雑性が増すのはどうなの？という感もある
+
+
+# まとめ
+
+100 を超えるゲームサーバーが必要なら EC2 instance じゃないと IP の制約的に無理
+それ以下なら Fargate がお得
+
+ゲームのみならず、ステートフルなアプリケーション全てに適用できそう
